# healpix-plotting

./: .gitignore  .pre-commit-config.yaml  LICENSE  pixi.toml  pyproject.toml
docs/: api.rst  conf.py  index.md  installation.md  requirements.txt  terminology.md
docs/_static/css/: custom.css
docs/tutorials/: index.md  quickstart.md
docs/user-guide/: healpix-grid.md  index.md  plot-function.md  sampling-grid.md
healpix_plotting/: __init__.py  sampling_grid.py
